examples/test/testpolicy8389.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8389
  namespace: namespace124
spec:
  podSelector:
    matchLabels:
      key30: value38
      key34: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value22
          key47: value9
      podSelector:
        matchLabels:
          key0: value20
          key10: value42
